--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@400;500;700&display=swap');
+
 @import "tailwindcss";
 
 :root {
+  --color-gold: #F7DF72;
+  --color-dark-gray: #444444;
+  --color-light-gray: #B0B0B0;
+  --color-white: #FFFFFF;
+  --color-black: #ffffff;
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #ffffff;
 }
 
 @theme inline {
@@ -14,7 +21,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ffffff;
     --foreground: #ededed;
   }
 }
@@ -22,5 +29,17 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.bg-grid {
+  background-color: #fff;
+  background-image:
+    linear-gradient(to right, rgba(16,185,129,0.07) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(16,185,129,0.07) 1px, transparent 1px);
+  background-size: 40px 40px;
 }
